Refactored main, small fix on about-us.
Moved some general styling from main.ejs to styles.css.
Fixed issue where bottom of card was being hidden by nav-bar in about us page.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,24 +79,6 @@ body {
   margin-top: 33vh;
 }
 
-
-#savings_message_container {
-  display: flex;
-  align-items: center;
-  border: 1px solid #94ad97; 
-  border-radius: 4px; 
-  padding: 10px; 
-}
-
-#savings_message_container img {
-  margin-right: 10px; 
-}
-
-#costs_chart_div {
-    width: 100%;
-    height: 100%;
-}
-
 /* ---------------------------------------------------------------- */
 /* Navigation icons */
 
@@ -149,6 +131,36 @@ body {
 .dropdown-icons {
   width: 24px;
   height: auto;
+}
+
+/* ---------------------------------------------------------------- */
+/* Main/summary page */
+
+#easter {
+  display: none;
+  width: 50px;
+  height: auto;
+}
+
+.spin {
+  animation: spin 2s linear infinite;
+}
+
+#savings_message_container {
+  display: flex;
+  align-items: center;
+  border: 1px solid #94ad97; 
+  border-radius: 4px; 
+  padding: 10px; 
+}
+
+#savings_message_container img {
+  margin-right: 10px; 
+}
+
+#costs_chart_div {
+    width: 100%;
+    height: 100%;
 }
 
 /* ---------------------------------------------------------------- */
@@ -224,11 +236,11 @@ body {
 /* ---------------------------------------------------------------- */
 /* Etc. */
 
-/* @keyframes fadeIn {
-  0% {
-    opacity: 0;
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
   }
-  100% {
-    opacity: 1;
+  to {
+    transform: rotate(360deg);
   }
-} */
+}
